@@ -59,6 +59,7 @@ mega8515 [untested]
 mega8535 [untested]
 tiny26
 76c711
+43usb320
 43usb355
 86rf401
 
